Fix spacing issues and add Archives logo

--- a/navstyles.css
+++ b/navstyles.css
@@ -10,7 +10,7 @@ ul {
 
 li a {
 	display: block;
-	color: #000;
+	color: #000000;
 	padding: 8px 16px;
 	text-decoration: none;
 }
